# drm-vc4-grabber

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: main.yml  publish.yml
src/: .#main.rs  dump_image.rs  ffi.rs  framebuffer.rs  hyperion.rs  hyperion_reply_generated.rs  hyperion_request_generated.rs  image_decoder.rs  main.rs
src/drivers/: driver.rs  mod.rs  v3ddriver.rs  vc4driver.rs
systemd/: drm-capture.service
