[package]
name = "DRM VC4 capture"
version = "0.1.0"
authors = ["Rudi <dyn-git@rudi-horn.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.95"
drm = "0.4.0"
nix = "0.20.0"
drm-ffi = "0.1.0"
drm-sys = "0.1.0"
image = "0.23.14"

[target.armv7-unknown-linux-gnueabihf]
linker = "arm-linux-gnueabihf-ld"