[package]
name = "drm-vc4-grabber"
version = "0.1.0"
authors = ["Rudi <dyn-git@rudi-horn.de>"]
edition = "2018"

[dependencies]
libc = "0.2.148"
drm = "0.4.0"
nix = "0.20.0"
drm-ffi = "0.1.0"
drm-sys = "0.1.0"
drm-fourcc = "2.0.0"
image = "0.23.14"
flatbuffers = "2.0.0"
byteorder = "1.4.3"
clap = "2.33.3"
